Movie genre CRUD
