# docs/swagger.json
@@ -1,21 +1,240 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "A simple API to manage movie rentals, \\n GitHub Repository: https://github.com/jorgemvv01/go-api",
+        "description": "A simple API to manage movie rentals \\n GitHub Repository: https://github.com/jorgemvv01/go-api",
         "title": "VideoClub Go - REST API",
         "contact": {},
         "version": "1.0"
     },
     "basePath": "/api",
     "paths": {
-        "/type/": {
+        "/genres": {
+            "get": {
+                "description": "Get all Genres.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Movie Genre"
+                ],
+                "summary": "Get all Genres",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/genres/create": {
+            "post": {
+                "description": "Create a new genre.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Movie Genre"
+                ],
+                "summary": "Create Genre",
+                "parameters": [
+                    {
+                        "description": "Create genre",
+                        "name": "tags",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.GenreRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/genres/delete/{ID}": {
+            "delete": {
+                "description": "Delete Genre by ID.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Movie Genre"
+                ],
+                "summary": "Delete Genre",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Delete genre by ID",
+                        "name": "ID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/genres/update/{ID}": {
+            "patch": {
+                "description": "Update Genre by ID.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Movie Genre"
+                ],
+                "summary": "Update Genre",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Update genre by ID",
+                        "name": "ID",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Create genre",
+                        "name": "tags",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.GenreRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/genres/{ID}": {
+            "get": {
+                "description": "Get a genre by ID.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Movie Genre"
+                ],
+                "summary": "Get Genre by ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Get genre by ID",
+                        "name": "ID",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/types/": {
             "get": {
                 "description": "Get all Types",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Type Movie"
+                    "Movie Type"
                 ],
                 "summary": "Get all Types",
                 "responses": {
@@ -40,14 +259,14 @@
                 }
             }
         },
-        "/type/{ID}": {
+        "/types/{ID}": {
             "get": {
                 "description": "Get Type by ID",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Type Movie"
+                    "Movie Type"
                 ],
                 "summary": "Get Type by ID",
                 "parameters": [
@@ -68,6 +287,12 @@
                     },
                     "400": {
                         "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/models.Response"
                         }
@@ -94,12 +319,6 @@
                 "responses": {
                     "200": {
                         "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Response"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/models.Response"
                         }
@@ -188,6 +407,12 @@
                             "$ref": "#/definitions/models.Response"
                         }
                     },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -238,6 +463,12 @@
                             "$ref": "#/definitions/models.Response"
                         }
                     },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -279,6 +510,12 @@
                             "$ref": "#/definitions/models.Response"
                         }
                     },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -290,6 +527,14 @@
         }
     },
     "definitions": {
+        "models.GenreRequest": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Response": {
             "type": "object",
             "properties": {
